<resources>
    <string name="app_name">ImproveGroupTestProject</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="si_title">Nice to see you again!</string>
    <string name="si_username_edit_text">Username</string>
    <string name="si_password_edit_text">Password</string>
    <string name="si_reg">Not one of us? Sign up here!</string>
    <string name="si_error_username_empty">Field \'Username\'  can\'t be empty!</string>
    <string name="si_error_password_empty">Field \'Password\'  can\'t be empty!</string>
    <string name="si_error_not_be_found">User with such username and password wasn\'t found!</string>
    <string name="si_error_incorrect_username_pass">Incorrected username or password!</string>


    <string name="si_success">Success!</string>

    <!-- Strings related to registration -->
    <string name="r_title">Fine choice!\nYou\'re gonna love our app.</string>
    <string name="r_fullname_edit_text">Fullname</string>
    <string name="r_username_edit_text">Username</string>
    <string name="r_password_edit_text">Password</string>
    <string name="r_email_edit_text">Email adress</string>
    <string name="r_birth">Birth</string>

    <string name="r_error_username_empty">Field \'Username\'  can\'t be empty!</string>
    <string name="r_error_password_empty">Field \'Password\'  can\'t be empty!</string>
    <string name="r_error_email_empty">Field \'Email\'  can\'t be empty!</string>
    <string name="r_error_email_not_valid">Field \'Email\' is not valid!</string>
    <string name="r_error_name_is_using">Such username is already using!</string>
    <string name="r_error_db_save">Opps,try again please!</string>
</resources>
