<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group.improve.improvegrouptestproject.RegistrationActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/ActivityTheme">


    <TextView
        android:text="@string/r_title"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleStyleTheme"
        android:layout_centerHorizontal="true"
        android:id="@+id/r_tv_title" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_below="@id/r_tv_title"
        android:layout_marginTop="@dimen/space_between"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <ScrollView
                android:id="@+id/r_srl_input_panel"
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                >

                <LinearLayout
                    android:background="@color/green"
                    android:id="@+id/r_ll_input_panel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <com.group.improve.improvegrouptestproject.ImpGroupEditText
                        android:hint="@string/r_fullname_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="20"
                        android:background="@color/green"
                        android:theme="@style/EditTextTheme"
                        style="@style/EditTextTheme"
                        android:id="@+id/r_et_fullname"
                        android:layout_marginTop="@dimen/top_margin"
                        android:layout_marginRight="@dimen/rigth_margin"
                        android:layout_marginLeft="@dimen/left_margin" />

                    <com.group.improve.improvegrouptestproject.ImpGroupEditText
                        android:hint="@string/r_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="20"
                        android:background="@color/green"
                        android:theme="@style/EditTextTheme"
                        style="@style/EditTextTheme"
                        android:layout_marginRight="@dimen/rigth_margin"
                        android:layout_marginLeft="@dimen/left_margin"
                        android:layout_marginTop="@dimen/space_between"
                        android:id="@+id/r_et_birth" />


                    <com.group.improve.improvegrouptestproject.ImpGroupEditText
                        android:hint="@string/r_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="20"
                        android:background="@color/green"
                        android:theme="@style/EditTextTheme"
                        style="@style/EditTextTheme"
                        android:layout_marginRight="@dimen/rigth_margin"
                        android:layout_marginLeft="@dimen/left_margin"
                        android:layout_marginTop="@dimen/space_between"
                        android:id="@+id/r_et_email" />



                    <com.group.improve.improvegrouptestproject.ImpGroupEditText
                        android:hint="@string/r_username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="20"
                        android:background="@color/green"
                        android:theme="@style/EditTextTheme"
                        style="@style/EditTextTheme"
                        android:layout_marginRight="@dimen/rigth_margin"
                        android:layout_marginLeft="@dimen/left_margin"
                        android:layout_marginTop="@dimen/space_between"
                        android:id="@+id/r_et_username" />



                    <com.group.improve.improvegrouptestproject.ImpGroupEditText
                        android:hint="@string/r_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="20"
                        android:background="@color/green"
                        android:theme="@style/EditTextTheme"
                        style="@style/EditTextTheme"
                        android:layout_marginRight="@dimen/rigth_margin"
                        android:layout_marginLeft="@dimen/left_margin"
                        android:layout_marginTop="@dimen/space_between"
                        android:id="@+id/r_et_pass"
                        android:layout_marginBottom="32dp" />


                </LinearLayout>

            </ScrollView>




        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/r_ll_input_panel"
            app:fabSize="normal"
            app:layout_anchor="@id/r_srl_input_panel"
            app:layout_anchorGravity="bottom|right|end"
            android:id="@+id/r_fb_action"
            android:src="@drawable/ic_done_white_256dp"
            android:layout_marginRight="10dp"
            app:backgroundTint="@color/yellow" />

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
